flow and eslint play nicley now

--- a/.eslintrc
+++ b/.eslintrc
@@ -42,7 +42,15 @@
     "eol-last": 0,
     "no-underscore-dangle": 0,
     "no-alert": 0,
-    "no-lone-blocks": 0
+    "no-lone-blocks": 0,
+    "require-jsdoc": ["error", {
+        "require": {
+            "FunctionDeclaration": false,
+            "MethodDefinition": false,
+            "ClassDeclaration": false,
+            "ArrowFunctionExpression": false
+        }
+    }]
   },
   "globals": {}
 }
