--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "serv": "nodemon --exec node lib/index.js"
+    "serv": "nodemon --exec node backend_libs/node/express.js"
   },
   "dependencies": {
     "express": "^4.14.0",
