started using data loader

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serv": "nodemon --exec node backend_libs/node/express.js"
   },
   "dependencies": {
+    "dataloader": "^1.2.0",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
     "graphql": "^0.8.2",
