--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "serv": "nodemon --exec node backend_libs/node/express.js"
+    "serv": "nodemon --exec node backend_libs/node/express.js",
+    "populate": "node backend_libs/database/loadTestMongoData.js"
   },
   "dependencies": {
+    "dataloader": "^1.2.0",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
     "graphql": "^0.8.2",
