--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,10 @@
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 6,
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "rules": {
     "brace-style" :0,
@@ -52,7 +55,8 @@
             "ClassDeclaration": false,
             "ArrowFunctionExpression": false
         }
-    }]
+    }],
+    "react/jsx-uses-vars": 1
   },
   "globals": {}
 }
