--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "graphql": "^0.8.2",
     "mongodb": "^2.2.22",
     "react": "15.4.2",
-    "react-native": "0.40.0"
+    "react-native": "0.40.0",
+    "react-native-awesome-button": "^1.6.0",
+    "react-relay": "^0.10.0"
   },
   "devDependencies": {
+    "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-jest": "18.0.0",
     "babel-preset-react-native": "1.9.1",
+    "babel-relay-plugin": "^0.10.0",
     "eslint": "^3.13.1",
     "eslint-config-google": "^0.7.1",
     "eslint-plugin-flowtype": "^2.30.0",
@@ -29,7 +33,8 @@
     "eslint-plugin-react-native": "^2.2.1",
     "jest": "18.1.0",
     "nodemon": "^1.11.0",
-    "react-test-renderer": "15.4.2"
+    "react-test-renderer": "15.4.2",
+    "sync-request": "^4.0.1"
   },
   "jest": {
     "preset": "react-native"
