--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.14.1",
     "express-graphql": "^0.6.3",
     "graphql": "^0.8.2",
+    "graphql-relay": "^0.5.1",
     "mongodb": "^2.2.22",
     "react": "15.4.2",
     "react-native": "0.40.0",
