--- a/package.json
+++ b/package.json
@@ -12,28 +12,28 @@
     "dataloader": "^1.2.0",
     "express": "^4.14.1",
     "express-graphql": "^0.6.3",
-    "graphql": "^0.8.2",
+    "graphql": "^0.10.5",
     "mongodb": "^2.2.22",
-    "react": "15.4.2",
-    "react-native": "0.40.0",
+    "react": "^15.6.1",
+    "react-native": "^0.47.1",
     "react-native-awesome-button": "^1.6.0",
-    "react-relay": "^0.10.0"
+    "react-relay": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
-    "babel-jest": "18.0.0",
-    "babel-preset-react-native": "1.9.1",
-    "babel-relay-plugin": "^0.10.0",
-    "eslint": "^3.13.1",
-    "eslint-config-google": "^0.7.1",
+    "babel-jest": "^20.0.3",
+    "babel-preset-react-native": "^2.1.0",
+    "babel-relay-plugin": "^0.11.0",
+    "eslint": "^4.4.0",
+    "eslint-config-google": "^0.9.1",
     "eslint-plugin-flowtype": "^2.30.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.9.0",
-    "eslint-plugin-react-native": "^2.2.1",
-    "jest": "18.1.0",
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-react-native": "^3.0.1",
+    "jest": "^20.0.4",
     "nodemon": "^1.11.0",
-    "react-test-renderer": "15.4.2",
+    "react-test-renderer": "^15.6.1",
     "sync-request": "^4.0.1"
   },
   "jest": {
